# SoftwareSupplyChainSecurity_HW1

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-final.txt  bandit-initial.txt  cyclonedx-sbom.json  main.py  merkle_proof.py  mypy.final.txt  mypy.initial.txt  part3-writeup.txt  personal.txt  pylint.final.txt  pylint.initial.txt  pyproject.toml  ruff.initial.txt  test_util.py  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _decimal.data.json  _decimal.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  base64.data.json  base64.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  (+88 more)
tests/: test_consistency.py  test_consistency_fail.py  test_get_log_entry.py  test_get_verification_proof.py  test_inclusion.py  test_inclusion_fail.py  test_inclusion_failed_log_entry.py  test_inclusion_failed_public_key_extraction.py  test_last_checkpoint.py  test_lats_checkpoint.py  test_merkle_proof.py  test_util.py
(+318 files in other folders)
