[tool.poetry]
name = "xichengtong-rekor"
version = "5.0"
description = "A Python project for secure artifact management"
authors = ["XichengTong <xt2226@nyu.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "myproject", from = "src" },
]

[tool.poetry.dependencies]
tomli = ">=1.0.0,<2.0.0"
python = "^3.12"
sigstore-rekor-types = "^0.0.13"
requests = "^2.32.3"
cryptography = "^43.0.3"

[tool.poetry.scripts]
xichengtong-rekor = "myproject.main:main"

[tool.ruff]
exclude = [
    "tests/"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pylint = "^3.3.1"
mypy = "^1.13.0"
bandit = "^1.7.10"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
